testsuite/tests/rename/should_fail/T13839b.hs
{-# OPTIONS_GHC -Wall #-}

nomain :: IO ()
nomain = putStrLn used

used :: String
used = "T13839"

nonUsed :: ()
nonUsed = ()
